--- a/src/html_links/daddy.css
+++ b/src/html_links/daddy.css
@@ -1,4 +1,5 @@
  .image_block    {
             width: 175px;
             height: 175px;
-            position: static;}
+            position: relative;
+            }
