--- a/src/css/daddy.css
+++ b/src/css/daddy.css
@@ -6,4 +6,13 @@
             margin-right: auto;
             }
 
-  
+
+
+  .vidz  {
+                display: block;
+                width: 420px;
+                height: 420px;
+                margin-left: auto;
+                margin-right: auto;
+                position: absolute;
+                }
