add color to the button

--- a/src/css/daddy.css
+++ b/src/css/daddy.css
@@ -22,3 +22,7 @@
                 background-image: url(../images/dvn7.jpg);
 
                }
+
+   .button {
+             background-color:brown;
+   }
