--- a/src/css/daddy.css
+++ b/src/css/daddy.css
@@ -19,7 +19,7 @@
                 }
 
   .block {
-                background-image: url(../images/dvn7.jpg);
+                background-image: url(../images/more-leaves-on-green.png);
 
                }
 
