--- a/src/css/daddy.css
+++ b/src/css/daddy.css
@@ -33,11 +33,12 @@
               background-color: brown;
    }
 
-   .navbar a {
+   .navbar {
               float: left;
               text-align: center;
               padding: 12px;
               color: wheat;
               text-decoration: none;
               font-size: 17px;
+              background-color: brown;
    }
