--- a/src/css/daddy.css
+++ b/src/css/daddy.css
@@ -53,3 +53,12 @@
               padding: 2%;
               text-align: center;
    }
+
+   .dickpics {
+    display: block;
+    width: 20px;
+    height: 20px;
+    margin-left: auto;
+    margin-right: auto;
+
+   }
